Fix code block scrollbars

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -199,4 +199,5 @@ pre {
 pre .hljs {
   padding: 0;
   background: inherit;
+  overflow-x: unset !important;
 }
